# crawltree

./: .clippy.toml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  example_config.json
.github/workflows/: rust.yml
examples/: config_based_crawler.rs  pages_builder.rs
src/: args.rs  config.rs  filter.rs  lib.rs  main.rs  pages.rs  results.rs  utils.rs
src/crawlers/: crawler.rs  mod.rs  web.rs
src/parsers/: html.rs  mod.rs  text.rs
src/parsers/tests/: integration_tests.rs  mod.rs  text_parser_tests.rs  text_parser_unit_tests.rs
