[package]
name = "yield-page"
version = "0.1.0"
edition = "2024"

[dependencies]
fantoccini = "0.21.5"
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
url = "2.5.4"
log = "0.4"
env_logger = "0.11"
regex = "1.11.1"
clap = { version = "4.5.4", features = ["derive"] }
